scrollbar position can be saved correctly now

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -1,3 +1,3 @@
 body {
-    width: 250px;
+    width: 280px;
 }
